--- a/.github/workflows/backend.yaml
+++ b/.github/workflows/backend.yaml
@@ -28,7 +28,7 @@ jobs:
           coverage: none
 
       - name: Install dependencies
-        run: composer install --no-interaction --prefer-dist
+        run: composer install --no-interaction --prefer-dist --no-progress
 
       - name: Lint (PHPStan)
         run: vendor/bin/phpstan analyse
