--- a/.github/workflows/backend.yaml
+++ b/.github/workflows/backend.yaml
@@ -12,26 +12,18 @@ jobs:
   backend:
     runs-on: ubuntu-latest
 
-    defaults:
-      run:
-        working-directory: backend
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: "8.2"
-          extensions: mbstring, intl, pdo_mysql
-          coverage: none
+      # Build ton Docker container backend
+      - name: Build backend image
+        run: docker build -t backend-dev ./backend
 
-      - name: Install dependencies
-        run: composer install --no-interaction --prefer-dist --no-progress
+      # Run PHPStan dans le container
+      - name: Run PHPStan
+        run: docker run --rm -v ${{ github.workspace }}/backend:/app backend-dev vendor/bin/phpstan analyse
 
-      - name: Lint (PHPStan)
-        run: vendor/bin/phpstan analyse
-
-      - name: Run tests
-        run: vendor/bin/phpunit
+      # Run PHPUnit dans le container
+      - name: Run PHPUnit
+        run: docker run --rm -v ${{ github.workspace }}/backend:/app backend-dev vendor/bin/phpunit
