--- a/.github/workflows/frontend.yaml
+++ b/.github/workflows/frontend.yaml
@@ -12,28 +12,26 @@ jobs:
   frontend:
     runs-on: ubuntu-latest
 
-    defaults:
-      run:
-        working-directory: frontend
-
     steps:
+      # 1️⃣ Checkout
       - uses: actions/checkout@v4
 
-      - name: Setup Node
-        uses: actions/setup-node@v4
-        with:
-          node-version: 18
-          cache: npm
-          cache-dependency-path: frontend/package-lock.json
+      # 2️⃣ Build Docker image
+      - name: Build frontend Docker image
+        run: docker build -t frontend-dev ./frontend
 
+      # 3️⃣ Install dependencies (npm ci)
       - name: Install dependencies
-        run: npm ci
+        run: docker run --rm -v ${{ github.workspace }}/frontend:/app frontend-dev npm ci
 
+      # 4️⃣ Lint
       - name: Lint
-        run: npm run lint
+        run: docker run --rm -v ${{ github.workspace }}/frontend:/app frontend-dev npm run lint
 
+      # 5️⃣ Tests
       - name: Tests
-        run: npm test -- --watch=false
+        run: docker run --rm -v ${{ github.workspace }}/frontend:/app frontend-dev npm test -- --watch=false
 
+      # 6️⃣ Build
       - name: Build
-        run: npm run build
+        run: docker run --rm -v ${{ github.workspace }}/frontend:/app frontend-dev npm run build
