--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,11 +1,14 @@
 services:
   backend:
-    build: ./backend
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
     container_name: backend-dev
-    ports:
-      - "8000:8000"
     volumes:
       - ./backend:/app
+    ports:
+      - "8000:8000"
+
 
   frontend:
     build: ./frontend
@@ -20,8 +23,19 @@ services:
     container_name: mobile-dev
     ports:
       - "19000:19000"
+      - "19001:19001"
+      - "19002:19002"
     volumes:
       - ./mobile:/app
+      - /app/node_modules
+    stdin_open: true
+    tty: true
+    environment:
+      EXPO_DEV_SERVER_PORT: 19000
+      EXPO_DEV_SERVER_HOST: 0.0.0.0
+    command: >
+      sh -c "npx expo start --tunnel --port 19000 --dev-client"
+
 
   grafana:
     image: grafana/grafana:latest
