--- a/mobile/Dockerfile
+++ b/mobile/Dockerfile
@@ -2,14 +2,11 @@ FROM node:24
 
 WORKDIR /app
 
-# Copy only the package.json
 COPY package*.json ./
+RUN npm install
 
-# Install dependencies
-RUN npm install -g expo-cli && npm install
-
-# Copy the whole mobile code
 COPY . .
 
-EXPOSE 19000
-CMD ["expo", "start", "--tunnel"]
+EXPOSE 19000 19001 19002
+
+CMD ["npx", "expo", "start", "--tunnel"]
