--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -13,3 +13,11 @@ RUN apt-get update && apt-get install -y \
 COPY --from=composer:2 /usr/bin/composer /usr/bin/composer
 
 WORKDIR /app
+
+# =====================
+# Commande de démarrage
+# =====================
+CMD [ "sh", "-c", "\
+  echo 'Démarrage du serveur PHP…' && \
+  php -S 0.0.0.0:8000 -t public \
+"]
