--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -8,6 +8,14 @@ services:
       - ./backend:/app
     ports:
       - "8000:8000"
+    environment:
+      DB_BACKEND_USER: backend
+      DB_BACKEND_PASSWORD: backend
+      DB_BACKEND_NAME: backend_db
+      DB_BACKEND_HOST: backend_db
+      DB_BACKEND_PORT: 5432
+    depends_on:
+      - backend_db
 
 
   frontend:
@@ -35,7 +43,6 @@ services:
       EXPO_DEV_SERVER_HOST: 0.0.0.0
     command: >
       sh -c "npx expo start --tunnel --port 19000 --dev-client"
-
 
   grafana:
     image: grafana/grafana:latest
@@ -69,19 +76,35 @@ services:
       - sonarqube_data:/opt/sonarqube/data
       - sonarqube_extensions:/opt/sonarqube/extensions
     depends_on:
-      - db
+      - sonar_db
 
-  db:
+  # PostgreSQL pour SonarQube
+  sonar_db:
     image: postgres:18
+    container_name: sonar-db
     environment:
       POSTGRES_USER: sonar
       POSTGRES_PASSWORD: sonar
       POSTGRES_DB: sonarqube
     volumes:
-      - sonarqube_db:/var/lib/postgresql/data
+      - sonarqube_db:/var/lib/postgresql/
+
+  # PostgreSQL pour le backend
+  backend_db:
+    image: postgres:18
+    container_name: backend-db
+    environment:
+      POSTGRES_USER: backend
+      POSTGRES_PASSWORD: backend
+      POSTGRES_DB: backend_db
+    ports:
+      - "5433:5432"
+    volumes:
+      - backend_db_data:/var/lib/postgresql/
 
 volumes:
   grafana-data:
   sonarqube_data:
   sonarqube_extensions:
   sonarqube_db:
+  backend_db_data:
