--- a/backend/.env
+++ b/backend/.env
@@ -25,3 +25,13 @@ APP_SHARE_DIR=var/share
 # See https://symfony.com/doc/current/routing.html#generating-urls-in-commands
 DEFAULT_URI=http://localhost
 ###< symfony/routing ###
+
+###> database ###
+# Backend database
+APP_SECRET=changeme
+DB_BACKEND_USER=backend
+DB_BACKEND_PASSWORD=changeme
+DB_BACKEND_NAME=backend_db
+DB_BACKEND_HOST=backend_db
+DB_BACKEND_PORT=5432
+###< database ###
