feat(backend): generated schema

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -5,8 +5,8 @@ FROM php:8.4-fpm
 
 # Installer les dépendances système nécessaires à Symfony
 RUN apt-get update && apt-get install -y \
-    git unzip libicu-dev libonig-dev libzip-dev \
-    && docker-php-ext-install intl mbstring pdo_mysql zip \
+    git unzip libicu-dev libonig-dev libzip-dev libpq-dev \
+    && docker-php-ext-install intl mbstring pdo_pgsql zip \
     && rm -rf /var/lib/apt/lists/*
 
 # Installer Composer
