added volume on frontend and backend so the docker compose keep the vendor / node module. added migration and composer install inside the docker compose

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -14,10 +14,15 @@ COPY --from=composer:2 /usr/bin/composer /usr/bin/composer
 
 WORKDIR /app
 
+COPY . .
+
+RUN composer install --prefer-dist --no-scripts
+
 # =====================
 # Commande de démarrage
 # =====================
 CMD [ "sh", "-c", "\
   echo 'Démarrage du serveur PHP…' && \
+  php bin/console doctrine:migrations:migrate --no-interaction --allow-no-migration && \
   php -S 0.0.0.0:8000 -t public \
 "]
