--- a/backend/.env.local.example
+++ b/backend/.env.local.example
@@ -1,9 +1,9 @@
 ###> database ###
 # Backend database
-APP_SECRET=changeme
 DB_BACKEND_USER=backend
 DB_BACKEND_PASSWORD=changeme
 DB_BACKEND_NAME=backend_db
 DB_BACKEND_HOST=backend_db
 DB_BACKEND_PORT=5432
 ###< database ###
+DATABASE_URL="postgresql://${DB_BACKEND_USER}:${DB_BACKEND_PASSWORD}@${DB_BACKEND_HOST}:${DB_BACKEND_PORT}/${DB_BACKEND_NAME}?serverVersion=18&charset=utf8"
