--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -6,6 +6,7 @@ services:
     container_name: backend-dev
     volumes:
       - ./backend:/app
+      - /app/vendor
     ports:
       - "8000:8000"
     environment:
@@ -25,6 +26,7 @@ services:
       - "3000:3000"
     volumes:
       - ./frontend:/app
+      - /app/node_modules
 
   mobile:
     build: ./mobile
